buttons fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ p {
   font-size: 20px;
   font-weight: lighter;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 4rem;
 }
 
 /* button styling */
@@ -93,7 +93,8 @@ button {
   justify-content: center;
   font-size: 14px;
   height: 50px;
-  padding: 1rem 4rem;
+  padding: 1rem;
+  margin-top: 1rem;
   background-color: var(--white);
   color: var(--orange);
   border: none;
@@ -101,6 +102,7 @@ button {
 
 .btn-img {
   padding: 10px;
+  height: 35px;
 }
 
 .contact-button {
@@ -180,6 +182,10 @@ button {
     height: 100px;
     padding: 1rem 4rem;
     margin-top: 100px;
+  }
+  .btn-img {
+    margin-left: 0.5rem;
+    height: 80%;
   }
 
   .contact-button {
